--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -85,6 +85,8 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
+/*Lines 91-127*/
+/*Cleaned up the excess code and chaned class name*/
 
 .benefit-lead {
     margin-bottom: 32px;
@@ -102,7 +104,6 @@ p {
     max-width: 150px;
 }
 
-
 .asset1 {
     margin-bottom: 20px;
     padding: 50px;
@@ -116,18 +117,11 @@ p {
     max-height: 200px;
 }
 
-.asset1 img {
-    max-height: 200px;
-}
-
-
 
 .asset1 h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-
 
 .footer {
     padding: 30px;
