--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/*Div elements needed changing here as well*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -38,7 +38,7 @@ body {
 
 .header nav ul li {
     display: inline-block;
-    margin-left: 25px;
+    margin-left: 25px;    
 }
 
 a {
@@ -104,7 +104,7 @@ p {
     max-width: 150px;
 }
 
-.asset1 {
+.mainSec {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -113,12 +113,12 @@ p {
     color: #ffffff;
 }
 
-.asset1 img {
+.mainSec img {
     max-height: 200px;
 }
 
 
-.asset1 h2 {
+.mainSec h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
